# api-iglu

./: .env  Cargo.toml  db.sql
src/: main.rs
src/api/: mod.rs
src/api/modules/: mod.rs
src/api/modules/blocks/: mod.rs  use_case.rs
src/api/modules/blocks/list_all/: mod.rs  use_case.rs
src/api/modules/equipments/: mod.rs  use_case.rs
src/api/modules/equipments/list_all/: mod.rs  use_case.rs
src/api/modules/materials/: mod.rs  use_case.rs
src/api/modules/materials/list_all/: use_case.rs
src/api/modules/request/: mod.rs
src/api/modules/request/calc/: use_case.rs
src/api/modules/roofs/: mod.rs
src/api/modules/roofs/list_all/: use_case.rs
src/api/modules/solar_factor/: mod.rs  use_case.rs
src/api/modules/solar_factor/list_all/: mod.rs  use_case.rs
src/api/routes/: blocks.rs  config.rs  equipments.rs  healthcheck.rs  materials.rs  mod.rs  request.rs  roofs.rs  solar_factor.rs
src/api/shared/: mod.rs
src/api/shared/blocks/: mod.rs  use_case.rs
src/api/shared/equipments/: use_case.rs
src/api/shared/materials/: use_case.rs
src/api/shared/roofs/: mod.rs  use_case.rs
src/api/shared/solar_factor/: use_case.rs
src/api/utils/calc/: equipment.rs  insolation.rs  lighting.rs  mod.rs  peoples.rs  roof.rs  wall.rs
src/database/: mod.rs
