[package]
name = "iglu-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
async_once = "0.2.6"
derive_more = "^0.99"
dotenv = "0.15.0"
env_logger = "0.8"
lazy_static = "1.4.0"
log = "^0.4"
strum = {version = "^0.24", features = ["derive"]}
strum_macros = "^0.24"
serde = {version = "^1", features = ["derive"]}
sqlx = { version = "0.6.3", features = ["runtime-actix-native-tls" , "postgres", "chrono", "uuid"] }
tokio = { version = "1.24.1", features = ["full"] }
uuid = {version = "^0.8", features = ["v4"]}